# psmove

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  psmove.c  vcpkg.json
examples/: test_tracker.cpp
include/psmove/: psmove_config.h  psmove_tracker.h
platform/: psmove_port_windows.c
psmove/: CMakeLists.txt  psmove.c  psmove_private.h
psmove/include/psmove/: psmove.h  psmove_config.h.in  psmove_fusion.h  psmove_tracker.h
psmove/tracker/: CMakeLists.txt  camera_control.cpp  camera_control.h  camera_control_private.h  psmove_fusion.cpp  psmove_tracker.cpp  tracker_helpers.cpp  tracker_helpers.h
psmove/tracker/platform/: camera_control_macosx.c
tracker/: CMakeLists.txt  psmove_fusion.cpp
utilities/: CMakeLists.txt  PSMoveConfigurator.cpp  PSMoveConfigurator.h  PSMoveConfiguratorMain.cpp
